@@ -58,14 +58,18 @@ public class JavaCodeStatistics extends SourceChecker {
     int numberOfIndexWarningSuppressions = 0;
 
     @Override
-    public void typeProcessingOver() {
-        System.out.printf("Found %d generic type uses.%n", generics);
-        System.out.printf("Found %d array accesses and creations.%n", arrayAccesses);
-        System.out.printf("Found %d typecasts.%n", typecasts);
-        System.out.printf(
-                "Found %d warning suppression annotations for the Index Checker.%n",
-                numberOfIndexWarningSuppressions);
-        super.typeProcessingOver();
+    public void typeProcessingOver(boolean hasError) {
+        if (hasError) {
+            System.out.printf("Not outputting statistics, because compilation issued an error.%n");
+        } else {
+            System.out.printf("Found %d generic type uses.%n", generics);
+            System.out.printf("Found %d array accesses and creations.%n", arrayAccesses);
+            System.out.printf("Found %d typecasts.%n", typecasts);
+            System.out.printf(
+                    "Found %d warning suppression annotations for the Index Checker.%n",
+                    numberOfIndexWarningSuppressions);
+        }
+        super.typeProcessingOver(hasError);
     }
 
     @Override
